<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.metaborg</groupId>
	<artifactId>disambiguation-bench</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>disambiguation-bench</name>

	<dependencies>

		<dependency>
			<groupId>org.metaborg</groupId>
			<artifactId>sdf2table</artifactId>
			<version>2.6.0-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- JMH version to use with this project. -->
    <jmh.version>1.19</jmh.version>

    <!-- Java source/target to use for compilation. -->
    <javac.target>1.8</javac.target>

    <!-- Name of the benchmark Uber-JAR to generate. -->
    <uberjar.name>benchmarks</uberjar.name>

    <main-class>org.metaborg.Benchmarks</main-class>
  </properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
            <source>1.7</source>
            <target>1.7</target>
        </configuration>
			</plugin>

			<!-- Create an executable JAR -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer
                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>${main-class}</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Testing if the code is runnable, and if the shaded JAR is runnable -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>test-executable</id>
            <phase>test</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>java</executable>
              <arguments>
                <argument>-Xmx8G</argument>
                <argument>-Xss64m</argument>
                <argument>-XX:MaxPermSize=256M</argument>
                <argument>-classpath</argument>
                <classpath />
                <argument>${main-class}</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
		</plugins>
	</build>




</project>
